--- a/src/conf/app.conf
+++ b/src/conf/app.conf
@@ -1,11 +1,11 @@
 appname = ah-dashboard
-httpport = 8085
-runmode = dev
+httpport = 8080
+runmode = prod
 
 # Postgres DB Details
 pgUser = postgres
 pgPassword = admin
-pgHost = localhost
+pgHost = toolzilla-postgres-postgresql.toolzilla.svc.cluster.local
 pgDatabase = postgres
 pgPort = 5432
 pgSchema = utf8
