--- a/src/conf/app.conf
+++ b/src/conf/app.conf
@@ -4,7 +4,7 @@ runmode = prod
 
 # Postgres DB Details
 pgUser = postgres
-pgPassword = admin
+pgPassword = Ry1cYOFal5
 pgHost = toolzilla-postgres-postgresql.toolzilla.svc.cluster.local
 pgDatabase = postgres
 pgPort = 5432
