--- a/src/conf/app.conf
+++ b/src/conf/app.conf
@@ -2,6 +2,8 @@ appname = toolzilla
 httpport = 8080
 runmode = prod
 
+basePath=toolzilla
+
 # Postgres DB Details
 pgUser = postgres
 pgPassword = Ry1cYOFal5
